--- a/style.css
+++ b/style.css
@@ -53,8 +53,11 @@ header {
 }
 
 header h1 {
+  width: 21rem;
+
   font: bold 3.5rem 'Poppins', sans-serif;
 
+  background-color: var(--background);
   color: var(--white);
 }
 
@@ -79,6 +82,7 @@ main {
 
 main .container {
   width: min(36.3rem, 100%);
+  background-color: var(--background);
 }
 
 main h2 {
@@ -129,22 +133,26 @@ main p a {
   font: normal 1.5rem 'Poppins', sans-serif;
 }
 
+main p a:hover {
+  opacity: 0.8;
+}
+
 img#star {
   width: 1rem;
   height: 1rem;
-  top: 50rem;
-  left: 150px;
+  top: 0rem;
+  left: 0px;
   position: fixed;
   z-index: -1;
-  animation: showStar 5s infinite;
+  animation: showStar 3s alternate infinite;
 }
 
 @keyframes showStar {
-  from {
+  0% {
     opacity: 0;
   }
 
-  to {
+  100% {
     opacity: 1;
   }
 }
