--- a/style.css
+++ b/style.css
@@ -72,6 +72,15 @@ header h1 span {
   background-position-x: -5rem;
 }
 
+#stars {
+  grid-area: left;
+
+  background: url('/img/stars.svg') no-repeat top/contain;
+  background-position-x: -5rem;
+
+  animation: showStar 2s infinite alternate;
+}
+
 main {
   grid-area: right;
 
@@ -135,16 +144,6 @@ main p a {
 
 main p a:hover {
   opacity: 0.8;
-}
-
-img#star {
-  width: 1rem;
-  height: 1rem;
-  top: 0rem;
-  left: 0px;
-  position: fixed;
-  z-index: -1;
-  animation: showStar 3s alternate infinite;
 }
 
 @keyframes showStar {
