--- a/style.css
+++ b/style.css
@@ -59,6 +59,11 @@ header h1 {
 
   background-color: var(--background);
   color: var(--white);
+  transition: 0.3s;
+}
+
+header h1:hover {
+  transform: scale(1.1, 1.1);
 }
 
 header h1 span {
