--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ header h1 span {
 }
 
 #image,
-#stars {
+.stars {
   grid-area: left;
   background-position-x: -5rem;
 }
@@ -81,7 +81,7 @@ header h1 span {
     no-repeat top/contain;
 }
 
-#stars {
+.stars {
   background: url('https://raw.githubusercontent.com/JeanCarlosHP/polaris-tech/master/img/stars.svg')
     no-repeat top/contain;
 
@@ -98,7 +98,6 @@ main {
 
 main .container {
   width: min(36.3rem, 100%);
-  background-color: var(--background);
 }
 
 main h2 {
@@ -168,8 +167,6 @@ main p a:hover {
     grid-template-columns: 1fr;
     grid-template-rows: 5rem 1fr 1fr;
 
-    width: 100%;
-
     grid-template-areas:
       'header'
       'image'
@@ -187,9 +184,14 @@ main p a:hover {
     justify-content: center;
   }
 
+  header h1:hover {
+    transform: scale(1, 1);
+  }
+
   #image,
-  #stars {
+  .stars {
     grid-area: image;
+    background-position: center;
   }
 
   main {
@@ -197,6 +199,17 @@ main p a:hover {
 
     justify-content: center;
     margin-top: 0;
+  }
+
+  main .container {
+    margin-top: -8rem;
+  }
+
+  main .stars  {
+    position: fixed;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
   }
 
   main p a {
