--- a/style.css
+++ b/style.css
@@ -70,22 +70,25 @@ header h1 span {
   color: var(--header-title);
 }
 
-#image,
-.stars {
+#image {
   grid-area: left;
+
+  background: url('https://raw.githubusercontent.com/JeanCarlosHP/polaris-tech/master/img/spaceman.svg')
+    no-repeat top/contain;
+
   background-position-x: -5rem;
 }
 
-#image {
-  background: url('https://raw.githubusercontent.com/JeanCarlosHP/polaris-tech/master/img/spaceman.svg')
-    no-repeat top/contain;
-}
+#star {
+  background: url('img/star.svg') no-repeat top/contain;
 
-.stars {
-  background: url('https://raw.githubusercontent.com/JeanCarlosHP/polaris-tech/master/img/stars.svg')
-    no-repeat top/contain;
+  width: 1rem;
+  height: 1rem;
 
-  animation: showStar 2s infinite alternate;
+  position: fixed;
+  z-index: -1;
+
+  animation: showStar infinite alternate;
 }
 
 main {
@@ -98,6 +101,7 @@ main {
 
 main .container {
   width: min(36.3rem, 100%);
+  background-color: var(--background);
 }
 
 main h2 {
@@ -190,8 +194,7 @@ main p a:hover {
     transform: scale(1, 1);
   }
 
-  #image,
-  .stars {
+  #image {
     grid-area: image;
     background-position: center;
   }
@@ -205,13 +208,6 @@ main p a:hover {
 
   main .container {
     margin-top: -8rem;
-  }
-
-  main .stars {
-    position: fixed;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
   }
 
   main button:hover,
