--- a/style.css
+++ b/style.css
@@ -80,7 +80,8 @@ header h1 span {
 }
 
 #star {
-  background: url('img/star.svg') no-repeat top/contain;
+  background: url('https://raw.githubusercontent.com/JeanCarlosHP/polaris-tech/master/img/star.svg')
+    no-repeat top/contain;
 
   width: 1rem;
   height: 1rem;
