--- a/style.css
+++ b/style.css
@@ -44,6 +44,18 @@ body {
     'left right';
 }
 
+.sr-only {
+  position: absolute;
+  height: 1px;
+  width: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip-path: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+
 header {
   grid-area: header;
 
